--- a/tkla.desktop
+++ b/tkla.desktop
@@ -3,12 +3,12 @@ Categories=Education;Qt;
 Comment[en_US]=
 Comment=
 Exec=kla %F
-GenericName[en_US]=Keyboard Layout Analyzer
+GenericName[en_US]=Text And Keyboard Layout Analyzer
 GenericName=Keyboard Layout Analyzer
-Icon=/mnt/Personal/Projects/QTProjects/kla/kla/Images/kla.png
+Icon=/mnt/Personal/Projects/QTProjects/tkla/tkla/Images/tkla512.png
 MimeType=
-Name[en_US]=kla
-Name=kla
+Name[en_US]=tkla
+Name=tkla
 Path=
 StartupNotify=true
 Terminal=false
