desktop file revised

--- a/tkla.desktop
+++ b/tkla.desktop
@@ -8,8 +8,8 @@ GenericName[en_US]=Text And Keyboard Layout Analyzer
 GenericName=Text And Keyboard Layout Analyzer
 Icon=/mnt/Personal/Projects/QTProjects/tkla/tkla/Images/tkla.png
 MimeType=
-Name[en_US]=tkla
-Name=tkla
+Name[en_US]=TKLA
+Name=TKLA
 Path=
 StartupNotify=true
 Terminal=false
