--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Omid Nikta <omidnikta@gmail.com>
 
 pkgname=takla
-pkgver=20140430
+pkgver=0.6.0
 pkgrel=1
 pkgdesc="Text And Keyboard Layout Analyzer."
 arch=('i686' 'x86_64')
@@ -30,28 +30,11 @@ build() {
 	msg "Starting make..."
 
 	qmake-qt4 ${srcdir}/${_gitname}
-	make clean
 	make
-
 } 
  
 package() {
-  # binary
-  install -D -m755 ${srcdir}/${pkgname} ${pkgdir}/usr/bin/${pkgname}
-
-  cd ${srcdir}/${_gitname}
-  # documentation & manual
-  install -d ${pkgdir}/usr/share/doc/${pkgname}
-  install -d ${pkgdir}/usr/share/doc/${pkgname}/Layouts
-  cp -r Manual/README.pdf ${pkgdir}/usr/share/doc/${pkgname}
-  cp -r Layouts/ ${pkgdir}/usr/share/doc/${pkgname}/
-
-  # icon
-  install -D -m644 Images/takla.png \
-    ${pkgdir}/usr/share/pixmaps/takla.png
-
-  # desktop
-  install -D -m644 ${pkgname}.desktop \
-    ${pkgdir}/usr/share/applications/${pkgname}.desktop
+	cd ${srcdir}
+	make INSTALL_ROOT="${pkgdir}/" install
 }
  
